# any

./: .gitignore  CMakeLists.txt  README.md
CMake/: findANY.cmake
cmake/: findAny.cmake
include/: any.hpp
include/any/: any.hpp  marco.hpp
src/: main.cpp  test.cpp
